# preschool-scraper

./: README.md  pyproject.toml  txschools_data.csv  txschools_failed_data.csv
src/: start.py
src/browser/: txschools_scraper.py
src/browser/provider/: generic_browser_provider.py
src/browser/scrapers/: default_scraper.py
src/browser/scrapers/configs/: txschools.json
src/tools/: csv_handler.py
