[tool.poetry]
name = "challenge-brightwheel"
version = "0.1.0"
description = ""
authors = ["marcelovb <marcelovillasboas@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.19.0"
pandas = "2.2.2"
requests = "^2.32.3"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
